# hypersync-client-rust

./: .gitignore  Cargo.toml  HackPresentation.md  README.md  capnp-runner.dockerfile
.cargo/: config.toml
.github/workflows/: capnp-build.dockerfile  ci.yaml  publish.yaml
examples/all_erc20/: Cargo.toml
examples/all_erc20/src/: main.rs
examples/call_decode_output/: Cargo.toml
examples/call_decode_output/src/: main.rs
examples/call_watch/: Cargo.toml
examples/call_watch/src/: main.rs
examples/drain_and_stop/: Cargo.toml
examples/drain_and_stop/src/: main.rs
examples/eip7702/: Cargo.toml
examples/eip7702/src/: main.rs
examples/erc20_decimal_sum/: Cargo.toml
examples/erc20_decimal_sum/src/: main.rs
examples/height_stream/: Cargo.toml  README.md
examples/height_stream/src/: main.rs
examples/reverse_wallet/: Cargo.toml
examples/reverse_wallet/src/: main.rs
examples/wallet/: Cargo.toml
examples/wallet/src/: main.rs
examples/watch/: Cargo.toml
examples/watch/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: format_serde_bincode.rs  format_serde_json.rs  net_types_serde_capnp.rs
hypersync-client/: Cargo.toml
hypersync-client/benches/: transform_memory.rs
hypersync-client/src/: arrow_reader.rs  block_iterator.rs  client_version.rs  column_mapping.rs  config.rs  decode.rs  decode_call.rs  from_arrow.rs  lib.rs  parquet_out.rs  parse_response.rs  preset_query.rs  simple_types.rs  stream.rs  to_ethers.rs  transport_format.rs  types.rs  util.rs  zero_copy_types.rs
hypersync-client/tests/: api_test.rs
hypersync-format/: Cargo.toml
hypersync-format/src/: error.rs  lib.rs
hypersync-format/src/types/: bloom_filter_wrapper.rs  data.rs  fixed_size_data.rs  hex.rs  mod.rs  quantity.rs  transaction_status.rs  transaction_type.rs  uint.rs  util.rs  withdrawal.rs
hypersync-format/test-data/: arbitrum_tx_receipt.json  arbitrum_tx_receipt2.json  base_tx_receipt.json  block_with_tx.json  block_without_tx.json  eip7702_transaction.json  log.json  optimism_tx_receipt.json  transaction.json  transaction_receipt.json  tron_block_without_tx.json
hypersync-format/tests/: deserialize_json.rs
hypersync-net-types/: Cargo.toml  Makefile  README.md  build.rs  hypersync_net_types.capnp  makefile
hypersync-net-types/benches/: compression.rs
hypersync-net-types/src/: block.rs  bloom_filter_wrapper.rs  generate_schema.rs  hypersync_net_types_capnp.rs  lib.rs  log.rs  query.rs  request.rs  response.rs  trace.rs  transaction.rs  types.rs
hypersync-net-types/src/__generated__/: hypersync_net_types_capnp.rs  mod.rs
hypersync-net-types/tests/: backward_compatibility.rs  backward_compatibility_tests.rs
hypersync-schema/: Cargo.toml
hypersync-schema/src/: lib.rs  util.rs
src/: lib.rs
