[package]
name = "hypersync-client-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.hypersync-format]
path = ".."

[[bin]]
name = "format"
path = "fuzz_targets/format.rs"
test = false
doc = false
bench = false
