[package]
name = "hypersync-client-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]
# to exclude from parent workspace

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
arbitrary = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"

[dependencies.hypersync-format]
path = "../hypersync-format"
features = ["arbitrary"]

[[bin]]
name = "format_serde_json"
path = "fuzz_targets/format_serde_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "format_serde_bincode"
path = "fuzz_targets/format_serde_bincode.rs"
test = false
doc = false
bench = false
