[package]
name = "hypersync-format"
version = "0.3.4"
edition = "2021"
description = "evm format library"
license = "MPL-2.0"

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
derive_more = { version = "1", features = ["full"] }
faster-hex = "0.9"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
alloy-primitives = "0.7.4"
sbbf-rs-safe = "0.3.2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
nohash-hasher = "0.2.0"

[dev-dependencies]
serde_test = "1"
hex-literal = "0.4"
serde_json = "1"
