[package]
name = "hypersync-net-types"
version = "0.11.0-rc.1"
edition = "2021"
description = "hypersync types for transport over network"
license = "MPL-2.0"

[dependencies]
capnp = "0.19"
serde = { version = "1", features = ["derive"] }
arrayvec = { version = "0.7", features = ["serde"] }

hypersync-format = { path = "../hypersync-format", version = "0.5" }
schemars = "1.0.4"
strum = "0.27.2"
strum_macros = "0.27.2"

[build-dependencies]
capnpc = "0.19"

[dev-dependencies]
hypersync-schema = { path = "../hypersync-schema" }
serde_json = "1"
pretty_assertions = "1"
