[package]
name = "all_erc20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hypersync-client = { path = "../../" }

alloy-dyn-abi = "0.5.0"
alloy-json-abi = "0.5.0"
tokio = { version = "1", features = ["full"] }
arrayvec = "0.7"
url = "2"
hex-literal = "0.4.1"
serde_json = "1.0.108"
arrow2 = "0.18.0"
prefix-hex = "0.7.1"
alloy-primitives = "0.5.2"
